src/test/resources/entity_test/valid/Employee.entity
// qdqds

  // qlkjqlksjd
Employee // foo
{ 
	id : int {@Id}; // the id
	firstName : string ;
	birthDate : date ;
}
 