src/test/resources/entity_test/invalid/Country1.entity

Country1 { 
	id : int {@Id};
	name : string { @FooBarZzz };   // field 'name' : '@FooBarZzz' (unknown annotation)
	foo : long ;
}
